# limen

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  config.toml
deploy/: limen.service
ml/: ngram_clf.py  parity.json
scripts/: loadtest.sh
src/: config.rs  eval.rs  event.rs  learn.rs  main.rs  proxy.rs  ratelimit.rs  sink.rs  state.rs  storage.rs
src/engine/: mod.rs  ngram.rs  rules.rs  verdict.rs
src/engine/llm/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs  provider.rs
src/tui/: mod.rs
