[package]
name = "limen"
version = "0.1.0"
edition = "2021"
description = "Limen — a TUI web application firewall with a pluggable LLM adjudication layer"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
# 阶段3:TUI
ratatui = "0.28"
crossterm = "0.28"
# 阶段2起使用(规则引擎)
regex = "1"
aho-corasick = "1"
# 阶段4:多 provider LLM 研判
crc32fast = "1"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
# 存储层
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
